--- a/Monkeys/Base.lproj/Main.storyboard
+++ b/Monkeys/Base.lproj/Main.storyboard
@@ -12,7 +12,7 @@
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Monkeys" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                    <view key="view" contentMode="scaleToFill" restorationIdentifier="cell" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
@@ -47,13 +47,43 @@
                                 </attributedString>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="4gB-3l-Xzj">
+                                <rect key="frame" x="0.0" y="490" width="414" height="372"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" textLabel="4LR-Zx-ctT" style="IBUITableViewCellStyleDefault" id="Ikq-QL-ed9">
+                                        <rect key="frame" x="0.0" y="24.5" width="414" height="43.5"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Ikq-QL-ed9" id="CX8-Tc-g2I">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="4LR-Zx-ctT">
+                                                    <rect key="frame" x="20" y="0.0" width="374" height="43.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="0.0"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="3dc-m8-bHs"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="Yxe-Es-JMa"/>
+                                </connections>
+                            </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="Lu9-Hb-Ekr" firstAttribute="top" secondItem="k3i-IA-1EW" secondAttribute="bottom" constant="8" symbolic="YES" id="2sQ-89-YwZ"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Lu9-Hb-Ekr" secondAttribute="trailing" constant="20" id="7Hl-9a-aIO"/>
+                            <constraint firstItem="4gB-3l-Xzj" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="8gh-eI-AKs"/>
                             <constraint firstItem="k3i-IA-1EW" firstAttribute="trailing" secondItem="Lu9-Hb-Ekr" secondAttribute="trailing" id="CxR-6i-U8h"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="4gB-3l-Xzj" secondAttribute="bottom" id="L8a-hW-ciH"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="4gB-3l-Xzj" secondAttribute="trailing" id="MaX-Ru-7BG"/>
                             <constraint firstItem="Lu9-Hb-Ekr" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="W0X-QS-GDC"/>
                             <constraint firstItem="k3i-IA-1EW" firstAttribute="leading" secondItem="Lu9-Hb-Ekr" secondAttribute="leading" id="fu3-Cv-Q6O"/>
                             <constraint firstItem="LIb-jp-g9a" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="jNW-Zb-EUe"/>
@@ -61,16 +91,18 @@
                             <constraint firstItem="Lu9-Hb-Ekr" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="q3N-jy-6Vc"/>
                             <constraint firstItem="Lu9-Hb-Ekr" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="qqk-E2-lob"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="LIb-jp-g9a" secondAttribute="trailing" constant="10" id="rzl-Wb-3bL"/>
+                            <constraint firstItem="4gB-3l-Xzj" firstAttribute="top" secondItem="Lu9-Hb-Ekr" secondAttribute="bottom" constant="20" id="zcs-3B-ucW"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="pickedMonkeyLabel" destination="k3i-IA-1EW" id="zbn-H3-Stk"/>
                         <outlet property="selectedMonkeyTextField" destination="Lu9-Hb-Ekr" id="Cq9-yW-BqC"/>
+                        <outlet property="tableV" destination="4gB-3l-Xzj" id="L1B-jZ-9Qd"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="139" y="124"/>
+            <point key="canvasLocation" x="137.68115942028987" y="123.88392857142857"/>
         </scene>
     </scenes>
     <resources>
