--- a/Monkeys/Base.lproj/Main.storyboard
+++ b/Monkeys/Base.lproj/Main.storyboard
@@ -51,22 +51,37 @@
                                 <rect key="frame" x="0.0" y="490" width="414" height="372"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" textLabel="4LR-Zx-ctT" style="IBUITableViewCellStyleDefault" id="Ikq-QL-ed9">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" id="Ikq-QL-ed9" customClass="MonkeyTableViewCell" customModule="Monkeys" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="24.5" width="414" height="43.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Ikq-QL-ed9" id="CX8-Tc-g2I">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="4LR-Zx-ctT">
-                                                    <rect key="frame" x="20" y="0.0" width="374" height="43.5"/>
-                                                    <autoresizingMask key="autoresizingMask"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="0.0"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h94-i5-Hul">
+                                                    <rect key="frame" x="27" y="11.5" width="42" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JqB-jW-PqQ">
+                                                    <rect key="frame" x="352" y="11.5" width="42" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstItem="h94-i5-Hul" firstAttribute="centerY" secondItem="CX8-Tc-g2I" secondAttribute="centerY" id="Blw-gF-1rD"/>
+                                                <constraint firstItem="JqB-jW-PqQ" firstAttribute="centerY" secondItem="CX8-Tc-g2I" secondAttribute="centerY" id="G07-U9-4AM"/>
+                                                <constraint firstAttribute="trailing" secondItem="JqB-jW-PqQ" secondAttribute="trailing" constant="20" symbolic="YES" id="LCg-aH-EBZ"/>
+                                                <constraint firstItem="h94-i5-Hul" firstAttribute="leading" secondItem="CX8-Tc-g2I" secondAttribute="leading" constant="27" id="nPK-UD-dWH"/>
+                                            </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="monkeyAreaLabel" destination="JqB-jW-PqQ" id="7XE-3M-Z5P"/>
+                                            <outlet property="monkeyNameLabel" destination="h94-i5-Hul" id="P3P-yW-p1U"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                                 <connections>
